Add some base body copy and icons for the page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indy Social - Coming Soon</title>
+    <title>Indy Social</title>
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Indy Social - Coming Soon</h1>
+    <header>
+        <h1>Building Community, One Event at a Time</h1>
+          <img src="./assets/IndySocial_Logo_Monotone.svg" alt="Indy Social Logo" />
+    </header>
+    <h2>About Indy Social</h2>
+    <p>Indy Social is an Indianapolis-based organization dedicated to fostering community connections through hosting meetups at various locations around the city. Our goal is to create opportunities for people to meet, socialize, and build meaningful relationships in a welcoming and inclusive environment. By organizing gatherings at diverse venues across the Indianapolis area, Indy Social encourages residents to explore local spots, engage with their neighbors, and cultivate a sense of belonging. Whether through casual meetups, interest-based events, or larger social gatherings, Indy Social aims to strengthen the fabric of our local community.</p>
+    <h2>Join Our Discord Community</h2>
+    <p>Discord is a voice, video, and text chat app that's used by tens of  millions of people to talk and hang out with their communities and friends. Indy Social maintains a moderated Discord server for  members 18 and older to chat and organize events on. Click the link below to join our server.</p>
+    <a href="https://discord.com/invite/indysocial" target="_blank" class="button">
+            Join Our Discord
+    </a>
+    <h2>Our Events</h2>
+    <p>Indy Socials members help bring people together by organizing a wide variety of events throughout the city—and sometimes beyond! Our range of events has included everything from regularly scheduled board game nights and craft meetups,  trivia, book clubs, seasonal events like pumpkin carving. There's always something to look forward to. Whether you're looking to try something new, meet some people to share hobbies with, or just have fun.</p>
+
+    <div class="icons">
+        <img src="./assets/yarn.svg" alt="Yarn Icon" />
+        <img src="./assets/dice.svg" alt="Dice Icon" />
+        <img src="./assets/books.svg" alt="Book Icon" />
+        <img src="./assets/beer.svg" alt="Beer Icon" />
+    </div>
+
+        
+
+   
 </body>
 </html>
