--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Building Community, One Event at a Time</h1>
-        <img src="./assets/IndySocial_Logo_Monotone.svg" alt="Indy Social Logo" />
+        <div class="header-container"> 
+            <img class="header-border" src="./assets/header.svg"/>        
+            <img class="logo" src="./assets/IndySocial_Logo_Monotone.svg" alt="Indy Social Logo"  />
+            <h1 class="header-title">Building Community, One Event at a Time</h1>
+            <img class="header-hero-image" src="./assets/indy-city-circle.jpg"/>
+        </div>
     </header>
     <h2>About Indy Social</h2>
     <p>Indy Social is an Indianapolis-based organization dedicated to fostering community connections through hosting meetups at various locations around the city. Our goal is to create opportunities for people to meet, socialize, and build meaningful relationships in a welcoming and inclusive environment. By organizing gatherings at diverse venues across the Indianapolis area, Indy Social encourages residents to explore local spots, engage with their neighbors, and cultivate a sense of belonging. Whether through casual meetups, interest-based events, or larger social gatherings, Indy Social aims to strengthen the fabric of our local community.</p>
