improve server text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>About Indy Social</h2>
     <p>Indy Social is an Indianapolis-based organization dedicated to fostering community connections through hosting meetups at various locations around the city. Our goal is to create opportunities for people to meet, socialize, and build meaningful relationships in a welcoming and inclusive environment. By organizing gatherings at diverse venues across the Indianapolis area, Indy Social encourages residents to explore local spots, engage with their neighbors, and cultivate a sense of belonging. Whether through casual meetups, interest-based events, or larger social gatherings, Indy Social aims to strengthen the fabric of our local community.</p>
     <h2>Join Our Discord Community</h2>
-    <p>Discord is a voice, video, and text chat app that's used by tens of  millions of people to talk and hang out with their communities and friends. Indy Social maintains a moderated Discord server for  members 18 and older to chat and organize events on. Click the link below to join our server.</p>
+    <p>Discord is a voice, video, and text chat app that's used by tens of  millions of people to talk and hang out with their communities and friends. Indy Social maintains a moderated Discord server for  members 18 and older to chat and organize events on. Click the link below to join our server to stay up to date with the latest events being organized.</p>
     <a href="https://discord.com/invite/indysocial" target="_blank" class="button">
             Join Our Discord
     </a>
